# nemotron-reasoning-challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: full.yaml  small.yaml
configs/experiment/: baseline.yaml
configs/inference/: greedy.yaml  sampling.yaml  self_consistency.yaml
configs/model/: nemotron_nano.yaml
configs/prompt/: cot.yaml  zero_shot.yaml
docs/lab_notebook/: 01_todo.md  02_notes.md  03_questions.md  04_solution_progress.md  05_annotations.md  06_final_ensemble.md  07_processed_ideas.md  README.md
docs/lab_notebook/experiments/: _template.md
scripts/: hello_hydra.py
src/tracking/: experiment.py
src/utils/: logging.py  seed.py
tests/unit/: test_experiment.py  test_logging.py  test_seed.py  test_smoke.py
