[project]
name = "nemotron-reasoning"
version = "0.1.0"
description = "NVIDIA Nemotron Model Reasoning Challenge — Kaggle solution and reusable ML pipeline template"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Dmitriy Masterov", email = "dmitriymasterov@bk.ru" }
]
license = { text = "MIT" }

dependencies = [
    # Core
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    
    # Configuration
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    
    # Experiment tracking
    "mlflow>=2.16",
    
    # ML basics (extended later for LLM specifics)
    "scikit-learn>=1.5",
    
    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

llm = [
    # LLM-specific, will be filled in later when we set up inference
    # "transformers>=4.44",
    # "torch>=2.4",
    # "vllm>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
